--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "refolder",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "Fold the composion",
   "main": "lib/index.js",
   "scripts": {
