--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-import": "^2.12.0",
-    "flow-bin": "^0.74.0",
+    "flow-bin": "^0.78.0",
     "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
-    "lint-staged": "^7.2.0"
+    "lint-staged": "^7.2.0",
+    "react": "^16.4.1"
   }
 }
