--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "@babel/preset-react": "^7.0.0-rc.1",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^9.0.0-beta.3",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
