--- a/.flowconfig
+++ b/.flowconfig
@@ -3,6 +3,7 @@ all=warn
 unclear-type=off
 untyped-import=off
 sketchy-null-mixed=off
+deprecated-type=off
 
 [options]
 suppress_comment=\\(.\\|\n\\)*\\$ExpectError
