--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   },
   "homepage": "https://github.com/lttb/refolder#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.1",
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-react": "^7.0.0-rc.1",
-    "babel-eslint": "^9.0.0-beta.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "9.0.0",
     "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.12.0",
-    "flow-bin": "^0.78.0",
+    "eslint-plugin-import": "^2.14.0",
+    "flow-bin": "^0.79.1",
     "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
